--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,19 @@
 <body>
 
 <h1>My Recipes!</h1>
+
+<table table class="table table-striped">
+    <thead>
+    <tr>
+        <td>Recipe Name</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="recipe : ${recipes}">
+        <td th:text="${recipe.description}"></td>
+    </tr>
+
+    </tbody>
+</table>
 </body>
 </html>
